--- a/app/src/main/res/layout/activity_question_view.xml
+++ b/app/src/main/res/layout/activity_question_view.xml
@@ -66,7 +66,8 @@
             android:textAlignment="center"
             android:textSize="22sp"
             android:padding="16dp"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:background="@drawable/TextOutline"/>
 
     </LinearLayout>
 
