--- a/app/src/main/res/layout/activity_question_view.xml
+++ b/app/src/main/res/layout/activity_question_view.xml
@@ -61,13 +61,21 @@
 
         <TextView
             android:text="Argentina"
+            style="@style/text_button" />
+        <TextView
+            android:text="Argentina"
+            style="@style/text_button" />
+        <TextView
+            android:text="Argentina"
+            style="@style/text_button" />
+        <TextView
+            android:text="Argentina"
+            style="@style/text_button" />
+        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="22sp"
-            android:padding="16dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/TextOutline"/>
+            android:text="Submit"
+            android:padding="8dp"/>
 
     </LinearLayout>
 
