--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:background">@drawable/default_text_outline</item>
+        <item name="android:textColor">@color/material_on_background_emphasis_medium</item>
     </style>
 
     <style name = "selected_text_button" parent="text_button">
