--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,23 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:background">@drawable/default_text_outline</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/material_on_background_emphasis_medium</item>
     </style>
 
     <style name = "selected_text_button" parent="text_button">
         <item name="android:background">@drawable/selected_text_outline</item>
-        <item name="android:textColor">@color/design_default_color_primary</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <style name = "correct_answer" parent = "text_button">
+        <item name="android:background">#338700</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name = "incorrect_answer" parent = "text_button">
+        <item name="android:background">#FF4747</item>
+        <item name="android:textColor">#000000</item>
     </style>
 </resources>
